Add clear all tasks and add confirm prompt before deleting or clearing tasks

--- a/style.css
+++ b/style.css
@@ -109,3 +109,20 @@ label {
 .error {
   background: red;
 }
+
+.btn-outline-dark {
+  background-color: transparent;
+  color: #000;
+}
+
+#updateButton {
+  width: 100%;
+}
+
+#deleteButton {
+  color: red;
+}
+
+#clearButton {
+  float: right;
+}
